--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -14,14 +14,16 @@
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
-                    hello, world
+                    <img src="icons/logo.png" alt="logo">
 				</a>
                 <div class="header__official">
-				
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
                 </div>
 				<div class="header__contacts">
-
-				</div>
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button">заказать звонок</button>
+				</div> 
             </header>
         </div>
     </div>
