--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,10 @@
                         Ответим на все вопросы
                     </div>
                 </div>
+                <button class="button button__main">заказать консультацию</button>
+                <div class="promo__link">или 
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
             </div>
         </div>
     </div>
