create and fill new block advantage

--- a/src/index.html
+++ b/src/index.html
@@ -49,5 +49,29 @@
             </div>
         </div>
     </div>
+    <section class="advantage">
+        <div class="container">
+            <div class="advantage__wrapper">
+                <div class="advantage__header">наши преимущества</div>
+                <div class="advantage__icons">
+                    <div class="advantage__icon">
+                        <img src="icons/cup.png" alt="goblet">
+                        <div class="advantage__icon_header">Делимся опытом</div>
+                        <div class="advantage__icon_description">Наши сотрудники всегда готовы поделиться своим опытом,  так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                    </div>
+                    <div class="advantage__icon">
+                        <img src="icons/heart.png" alt="heart">
+                        <div class="advantage__icon_header">Заботимся о здоровье</div>
+                        <div class="advantage__icon_description">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                    </div>
+                    <div class="advantage__icon">
+                        <img src="icons/shoe.png" alt="shoe">
+                        <div class="advantage__icon_header">Учим бегать</div>
+                        <div class="advantage__icon_description">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - I LOVE RUNNING.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
