--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <section class="advantage">
         <div class="container">
             <div class="advantage__wrapper">
-                <div class="advantage__header">наши преимущества</div>
+                <div class="title">наши преимущества</div>
                 <div class="advantage__icons">
                     <div class="advantage__icon">
                         <img src="icons/cup.png" alt="goblet">
@@ -67,10 +67,23 @@
                     <div class="advantage__icon">
                         <img src="icons/shoe.png" alt="shoe">
                         <div class="advantage__icon_header">Учим бегать</div>
-                        <div class="advantage__icon_description">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - I LOVE RUNNING.</div>
+                        <div class="advantage__icon_description">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING.</span></div>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="consultation">
+        <div class="container">
+            <div class="title consultation__title">Получите бесплатную консультацию<br> по подбору пульсометра</div>
+            <div class="consultation__descr">Просто заполните форму заявки<br>  и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+
+                <button>заказать консультацию</button>
+            </form>
         </div>
     </section>
 </body>
