complete section consultation

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                 <input name="phone" required placeholder="Ваш телефон" type="number">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
 
-                <button>заказать консультацию</button>
+                <button class="button button_submit">заказать консультацию</button>
             </form>
         </div>
     </section>
