--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -86,5 +87,25 @@
             </form>
         </div>
     </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide01.png" alt="slide01">
+                </div>
+                <div>
+                    <img src="img/slide02.png" alt="slide02">
+                </div>
+                <div>
+                    <img src="img/slide03.png" alt="slide03">
+                </div>
+              </div>
+        </div>
+    </section>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
